--- a/Java-Experiment-Ten/myhometown/index.html
+++ b/Java-Experiment-Ten/myhometown/index.html
@@ -20,7 +20,7 @@
 
 		</div>
 		<div class="tag ">
-			<ul class="clearfix">
+			<ul class="nav clearfix">
 				<a href="introduction.html" target="mainFrame"><li>简介</li></a>
 				<li class="line"> </li>
 				<a href="table.html" target="mainFrame"><li>名片</li></a>
